--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -824,7 +824,7 @@
     display: flex;
     flex-direction: column;
     padding: 6px;
-    gap: 6px;
+    gap: 2px;
     transform: translate(-50%, calc(-100% - 24px));
     background-color: var(--color-background);
     box-shadow: 0 0 4px #0005;
@@ -832,6 +832,9 @@
     transition-duration: 0.2s;
     font-size: 16px;
 
+    &.display-below {
+        transform: translate(-50%, 20px);
+    }
     &.hidden {
         opacity: 0;
         pointer-events: none;
@@ -840,8 +843,9 @@
 
     span {
         display: flex;
-        gap: inherit;
+        gap: 6px;
         align-items: center;
+        margin: 0 4px;
     }
     
     textarea {
@@ -853,5 +857,10 @@
     
     input {
         margin-right: auto;
+        padding-top: 4px;
+    }
+
+    button {
+        padding: 6px 4px;
     }
 }
