redesigned game log

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -48,9 +48,9 @@ body {
         --color-primary: #ffb77c;
         --color-text-primary: white;
         --color-text-inverse: black;
-        --color-not-intense: #443c36;
-        --color-button-hover: #4b3d39;
-        --color-button-active: #493631;
+        --color-not-intense: #352f2a;
+        --color-button-hover: #3d3432;
+        --color-button-active: #4e3f3b;
         --color-button-big: #524c49;
         --color-button-text: #ddd;
         --color-input-underline: #6b534e;
