fixed prefab cache break

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -49,8 +49,8 @@ body {
         --color-text-primary: white;
         --color-text-inverse: black;
         --color-not-intense: #352f2a;
-        --color-button-hover: #3d3432;
-        --color-button-active: #4e3f3b;
+        --color-button-hover: #493c39;
+        --color-button-active: #584742;
         --color-button-big: #524c49;
         --color-button-text: #ddd;
         --color-input-underline: #6b534e;
