--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -180,6 +180,8 @@ button.big {
     background-color: var(--color-button-big);
     color: var(--color-text-primary);
     padding: 8px 16px;
+    padding-bottom: 12px;
+    box-shadow: 0 -4px 0 #0007 inset;
 }
 button.compact {
     padding: 4px 8px;
@@ -380,11 +382,13 @@ li {
         position: fixed;
         opacity: 0;
         pointer-events: none;
-        transition-duration: 0.1s;
+        transition-duration: 0.2s;
+        transform: translateY(20px);
     }
     > .show {
         opacity: 1;
         pointer-events: all;
+        transform: none;
     }
 }
 
@@ -476,6 +480,8 @@ header {
     border-bottom: 2px solid var(--color-separator);
     align-items: center;
     background-color: var(--color-header);
+    position: sticky;
+    z-index: 10;
 
     > span > * {
         opacity: 1;
@@ -484,6 +490,19 @@ header {
             @extend .invisible;
         }
     }
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    padding: 12px 24px;
+    background-color: #060606;
 }
 
 .dropdown {
