--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -51,7 +51,7 @@ body {
         --color-not-intense: #352f2a;
         --color-button-hover: #493c39;
         --color-button-active: #584742;
-        --color-button-big: #524c49;
+        --color-button-big: #524038;
         --color-button-text: #ddd;
         --color-input-underline: #6b534e;
         --color-selected: #ccc;
@@ -85,6 +85,8 @@ a {
     &:active {
         color: var(--color-note);
     }
+
+    &.disabled { pointer-events: none; opacity: 0.4; }
 
     &.title {
         text-decoration: none;
@@ -157,7 +159,6 @@ h2 {
 }
 h3 {
     @extend %heading;
-    margin-top: 8px;
 }
 
 %clickable {
@@ -214,6 +215,9 @@ button.big {
     padding: 8px 16px;
     padding-bottom: 12px;
     box-shadow: 0 -4px 0 #0007 inset;
+    min-width: 100px;
+
+    &.icon { height: 40px; }
 }
 button.compact {
     padding: 4px 8px;
@@ -310,13 +314,8 @@ input {
         outline: none; /* Remove outline */
 
         &:hover {
-            &::-webkit-slider-thumb {
-                background: var(--color-primary);
-            }
-            
-            &::-moz-range-thumb {
-                background: var(--color-primary);
-            }
+            &::-webkit-slider-thumb { background: var(--color-primary); }
+            &::-moz-range-thumb     { background: var(--color-primary); }
         }
 
         &::-webkit-slider-thumb {
@@ -347,8 +346,7 @@ input {
 li {
     display: flex;
     gap: 4px;
-    border: 2px solid var(--color-button-active);
-    border-radius: $radius;
+    background-color: var(--color-background);
     align-items: center;
     padding: 4px;
 }
@@ -364,6 +362,10 @@ li {
 }
 %responsive:not(:disabled):active {
     transform: scale(0.95);
+}
+
+.responsive {
+    @extend %responsive;
 }
 
 #content {
@@ -422,7 +424,6 @@ li {
 }
 
 .edit-img {
-    @extend %responsive;
     display: flex;
     position: relative;
     outline: 2px dashed transparent;
@@ -454,6 +455,7 @@ li {
         width: 100%;
         height: 100%;
         object-fit: contain;
+        align-self: center;
     }
 }
 
