--- a/web/sass/fog_of_war.scss
+++ b/web/sass/fog_of_war.scss
@@ -8,7 +8,7 @@
     }
 
     .polypattern, .positive-pole {
-        fill: url(#barrier);
+        fill: url(#barrier) !important;
         opacity: 0.7;
     }
 
@@ -34,7 +34,7 @@
     opacity: 1 !important;
 
     .polypattern {
-        fill: var(--color-not-intense) !important;
+        fill: var(--color-background) !important;
         opacity: 1 !important;
     }
 }
