--- a/web/sass/fog_of_war.scss
+++ b/web/sass/fog_of_war.scss
@@ -1,7 +1,13 @@
-#polymask {
-    position: absolute;
+#board {
+    > svg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
+}
 
-    &, rect {
+#polymask {
+    rect {
         width: 100%;
         height: 100%;
     }
