--- a/web/sass/fog_of_war.scss
+++ b/web/sass/fog_of_war.scss
@@ -6,12 +6,12 @@
     }
 }
 
-#polymask {
-    rect {
-        width: 100%;
-        height: 100%;
-    }
+svg rect {
+    width: 100%;
+    height: 100%;
+}
 
+#polymask {
     .polypattern, .positive-pole {
         fill: url(#barrier) !important;
         opacity: 0.7;
