--- a/web/sass/panels.scss
+++ b/web/sass/panels.scss
@@ -47,6 +47,7 @@
     padding: 24px 32px 16px 32px;
     gap: 16px;
     min-width: 222px;
+    pointer-events: all;
 
     h2 {
         text-align: center;
