limit to 10 maps per campaign

--- a/web/sass/map_tab.scss
+++ b/web/sass/map_tab.scss
@@ -89,6 +89,8 @@
             }
         }
 
+        > .navigate { z-index: 1; }
+
         > button.dm {
             position: absolute;
         }
