refactored measuring class

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -580,7 +580,7 @@
         stroke: none !important;
     }
 }
-#distanceText {
+.distance-text {
     position: absolute;
     z-index: 101;
     padding: 8px 12px;
